lib/libui/chatwidget/snapshots/libui__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: lib/libui/chatwidget/tests.rs
expression: contents
---

                                                                                                    
  Would you like to run the following command?                                                      
                                                                                                    
  $ cat <<'EOF'                                                                                     
  hello                                                                                             
  EOF                                                                                               
                                                                                                    
› 1. Yes, proceed (y)                                                                               
  2. No, and tell gpt-5.4-codex what to do differently (esc)                                        
                                                                                                    
  Press enter to confirm or esc to cancel
