lib/libui/chatwidget/snapshots/libui__chatwidget__tests__chat_small_idle_h1.snap
---
source: lib/libui/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
