lib/libui/chatwidget/snapshots/libui__chatwidget__tests__chat_small_running_h2.snap
---
source: lib/libui/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
"                                        "
