lib/libui/chatwidget/snapshots/libui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: lib/libui/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
n
g
e
A
p
p
r
o
v
e
d
”
i
s
r
e
n
d
e
r
e
d
t
o
u
p
d
a
t
e

t
h
a
t
v
i
e
w
.
