lib/libui/chatwidget/snapshots/libui__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: lib/libui/chatwidget/tests.rs
expression: blob
---
■ '/model' is disabled while a task is in progress.
